--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -248,10 +248,11 @@
             android:layout_height="wrap_content"
             android:text="@string/button7"
             android:textSize="@dimen/buttonFontSize"
+            app:layout_constraintBottom_toTopOf="@+id/guideline13"
             app:layout_constraintEnd_toStartOf="@+id/button8"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/guideline9"
-            tools:layout_editor_absoluteY="472dp" />
+            app:layout_constraintTop_toTopOf="@+id/guideline11" />
 
         <Button
             android:id="@+id/button8"
