编写WinFragment和LoseFragment，并修复了一些已知问题

--- a/app/src/main/res/layout/fragment_win.xml
+++ b/app/src/main/res/layout/fragment_win.xml
@@ -43,7 +43,7 @@
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{@string/win_score_message(data.highScore)}"
+            android:text="@string/win_message"
             android:textSize="@dimen/BigFontSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
             android:id="@+id/textView13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/win_score_message"
+            android:text="@{@string/win_score_message(data.highScore)}"
             android:textSize="@dimen/BigFontSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
